# uav-ekf

./: .gitignore  IDENTIFICATION_NOTES.md  REFERENCES.md  SENSOR_MODELS.md  STUDY.md  pyproject.toml  run.py  vktest.py
_extract_model_rar2/!Модель/: AUTOFLARE.m  AUTOPILOT.m  BALANCING.m  BINS1.m  BINS2.m  BINS3.m  BINS_OFK.m  BINS_OFK2.m  BINS_OFK_2ch.m  C_ANG.m  EARTHMODEL.m  FCT.m  FLIGHTSIM.m  FX1.m  GENERATOR_SV.m  GLCAPTURE.m  GNSS_1.m  GNSS_2.m  HEADINGHOLD.m  INITIVK.m  INITLA.m  INITSIM.m  INTSTATE.m  MK_SRD_1.m  MK_SRD_2.m  MODELING_1.m  MODELING_2.m  OFK.m  OUTPUT_GNSS.txt  OUTPUT_OCEN.txt  OUTPUT_OFK1.txt  OUTPUT_OFK11.txt  OUTPUT_OFK2.txt  OUTPUT_OFK3.txt  OUTPUT_SRD.txt  OUTPUT_STATOFK.txt  OUTPUT_error_BINS1.txt  OUTPUT_error_BINS11.txt  OUTPUT_error_BINS2.txt  OUTPUT_error_BINS3.txt  (+7 more)
feb/: IMPLEMENTATION_REFERENCE.md  PROFESSOR_BRIEF.md  README.md  REFERENCES.md  TECHNICAL_DOCUMENTATION.md  WALKTHROUGH_FROM_A_TO_Z.md  __init__.py  main.py  perplexity_var.py  start.py  test_identification_quality.py  test_realtime_viz_mode3.py
feb/analysis/: __init__.py  navigation_analyzer.py  results_analyzer.py
feb/config/: __init__.py  aircraft_params.py  navigation_params.py
feb/control/: __init__.py  excitation.py
feb/filters/: __init__.py  ekf_base.py  navigation_ekf.py  parameter_ekf.py
feb/models/: __init__.py  aerodynamics.py  aircraft_dynamics.py  gnss_model.py  ins_model.py
feb/sensors/: __init__.py  (+1 more)
models/: __init__.py  aircraft_dynamics.py
nav_accuracy_sweep/: SUMMARY.md
src/: __init__.py
tests/: test_param_ekf_fusion_measurements.py
(+17 files in other folders)
